# papercast

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  push_to_github.sh  pyproject.toml
app/: auth.py  cleanup.py  cli.py  config.py  jobs.py  main.py  models.py  web.py
app/pipeline/: acquire.py  assemble.py  ingest.py  narrative.py  parse.py  pdf_ingest.py  pdf_parse.py  slides.py  structure.py  tts.py
app/static/: styles.css
app/templates/: _status.html  base.html  index.html  job.html  slide.html
